Add home site(navbar and header)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Montserrat|Signika|Parisienne&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/dd62baeea0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,6 +24,35 @@
         </div>
         <div class="curtain__box-title">
             <h1 class="curtain__title">Mini kasyno</h1>
+        </div>
+    </div>
+    <div class="home">
+        <div class="home__navigation-box navigation-box">
+            <!-- <div class="navigation-box__menu menu">
+                <i class="fas fa-times"></i>
+                <a href="#" class="menu__item">Strona Główna</a>
+                <a href="#" class="menu__item">Gra</a>
+                <a href="#" class="menu__item">Gra</a>
+                <a href="#" class="menu__item">Gra</a>
+                <a href="#" class="menu__item">Gra</a>
+                <a href="#" class="menu__item">Gra</a>
+                <a href="#" class="menu__item">Kontakt</a>
+            </div> -->
+        </div>
+        <div class="home__main main">
+            <div class="main__navbar navbar">
+                <i class="fas fa-bars navbar__icon"></i>
+                <h3 class="navbar__title">Mini kasyno</h3>
+                <i class="far fa-user navbar__icon"></i>
+            </div>
+            <div class="main__header header">
+                <div class="header__text-container">
+                    <p class="header__title">My jesteśmy gotowi, <br>a Ty?</p>
+                    <a href="#" class="header__button header__button--sign-up">Sign up</a>
+                    <a href="#" class="header__button header__button--sign-in">Sign in</a>
+                </div>
+            </div>
+            <div class="main__games-box games-box"></div>
         </div>
     </div>
 </body>
