--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mini kasyno</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Montserrat|Signika|Parisienne&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dd62baeea0.js" crossorigin="anonymous"></script>
 </head>
 
@@ -30,7 +29,8 @@
         <div class="home__navigation-box-left navigation-box-left">
             <i class="fas fa-times navigation-box-left__cross"></i>
             <ul class="navigation-box-left__list">
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Strona Główna</a>
+                <ul class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="index.html">Strona Główna</a>
                 </ul>
                 <ul class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="contact/index.html">Kontakt</a></ul>
@@ -113,6 +113,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="nav.js"></script>
 </body>
 
 </html>
