Change today active hours

--- a/contact/index.html
+++ b/contact/index.html
@@ -98,13 +98,23 @@
                         <i class="fas fa-sort-down data-box__icon data-box__icon--open"></i>
                         <i class="fas fa-sort-up data-box__icon data-box__icon--close"></i>
                         <ul class="data-box__list">
-                            <li class="data-box__text data-box__text--day" id="1">Poniedziałek: 08:00-16:00</li>
-                            <li class="data-box__text data-box__text--day" id="2">Wtorek: 08:00-16:00</li>
-                            <li class="data-box__text data-box__text--day" id="3">Środa: 08:00-16:00</li>
-                            <li class="data-box__text data-box__text--day" id="4">Czwartek: 08:00-16:00</li>
-                            <li class="data-box__text data-box__text--day" id="5">Piątek: 08:00-16:00</li>
-                            <li class="data-box__text data-box__text--day" id="6">Sobota: 10:00-14:00</li>
-                            <li class="data-box__text data-box__text--day" id="7">Niedziela: Zamknięte</li>
+                            <li class="data-box__text data-box__text--day">Poniedziałek:
+                                <span class="data-box__text data-box__text--hours" id="1">08:00-16:00</span></li>
+                            <li class="data-box__text data-box__text--day">Wtorek:
+                                <span class="data-box__text data-box__text--hours" id="2">08:00-16:00</span></li>
+                            <li class="data-box__text data-box__text--day">Środa:
+                                <span class="data-box__text data-box__text--hours" id="3">08:00-16:00</span>
+                            </li>
+                            <li class="data-box__text data-box__text--day">Czwartek:
+                                <span class="data-box__text data-box__text--hours" id="4">08:00-16:00</span></li>
+                            <li class="data-box__text data-box__text--day">Piątek:
+                                <span class="data-box__text data-box__text--hours" id="5">08:00-16:00</span>
+                            </li>
+                            <li class="data-box__text data-box__text--day">Sobota:
+                                <span class="data-box__text data-box__text--hours" id="6">10:00-14:00</span>
+                            </li>
+                            <li class="data-box__text data-box__text--day">Niedziela:
+                                <span class="data-box__text data-box__text--hours" id="0">Zamknięte</span> </li>
                         </ul>
                     </div>
                 </div>
