Complete blackjack interface

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -22,23 +22,23 @@
             <img src="images/token.png" alt="" class="progress-bar__token">
         </div>
         <div class="curtain__box-title">
-            <h1 class="curtain__title">Mini kasyno</h1>
+            <p class="curtain__title">Mini kasyno</p>
         </div>
     </div>
     <div class="home">
         <div class="home__navigation-box-left navigation-box-left">
             <i class="fas fa-times navigation-box-left__cross"></i>
             <ul class="navigation-box-left__list">
-                <ul class="navigation-box-left__item">
+                <li class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="index.html">Strona Główna</a>
-                </ul>
-                <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="contact/index.html">Kontakt</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Blackjack</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Makao</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
+                </li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="contact/index.html">Kontakt</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Blackjack</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Makao</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
             </ul>
         </div>
         <div class="home__navigation-box-right navigation-box-right">
