Change structure of files and folder and add war subsite

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="nav.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
