--- a/contact/index.html
+++ b/contact/index.html
@@ -21,8 +21,10 @@
                 </ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="index.html">Kontakt</a>
                 </ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Blackjack</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Makao</a></ul>
+                <ul class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../blackjack/index.html">Blackjack</a></ul>
+                <ul class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../war/index.html">Wojna</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
@@ -123,7 +125,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="../nav.js"></script>
+    <script src="../js/nav.js"></script>
 </body>
 
 </html>
