--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 </li>
                 <li class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="contact/index.html">Kontakt</a></li>
-                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Blackjack</a></li>
-                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Makao</a></li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="blackjack/index.html">Blackjack</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="war/index.html">War</a>
+                </li>
                 <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
                 <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
                 <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
@@ -93,7 +95,7 @@
                     </div>
                     <div class="games-box__game game">
                         <div class="game__background game__background--second"></div>
-                        <h4 class="game__name">Makao</h4>
+                        <h4 class="game__name">Wojna</h4>
                     </div>
                     <div class="games-box__game game">
                         <div class="game__background game__background--third"></div>
