--- a/war/index.html
+++ b/war/index.html
@@ -24,12 +24,14 @@
             <i class="fas fa-times navigation-box-left__cross"></i>
             <ul class="navigation-box-left__list">
                 <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="index.html">Strona Główna</a>
+                    <a class="navigation-box-left__link" href="../index.html">Strona Główna</a>
                 </ul>
                 <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="contact/index.html">Kontakt</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Blackjack</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Makao</a></ul>
+                    <a class="navigation-box-left__link" href="../contact/index.html">Kontakt</a></ul>
+                <ul class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../blackjack/index.html">Blackjack</a></ul>
+                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="index.html">War</a>
+                </ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
@@ -87,15 +89,15 @@
                     <div class="circles-container__circle circles-container__circle--main"></div>
                 </div>
             </div>
-            <div class="main__game game">
-                <p class="game__saldo">Twoje saldo: <span>100</span></p>
-                <img src="../images/cards/card.jpg" alt="" class="game__hand game__hand--computer">
-                <img src="../images/cards/card.jpg" alt="" class="game__hand game__hand--user">
-                <form action="" class="game__form form">
+            <div class="main__play play">
+                <p class="play__saldo">Twoje saldo: <span>100</span></p>
+                <img src="../images/cards/card.jpg" alt="" class="play__hand play__hand--computer">
+                <img src="../images/cards/card.jpg" alt="" class="play__hand play__hand--user">
+                <form action="" class="play__form form">
                     <label for="rate" class="form__text">Stawka: </label>
                     <input type="number" class="form__rate" id="rate"></form>
-                <button class="game__play-btn">Graj</button>
-                <div class="game__stats stats game__point">
+                <button class="play__play-btn">Graj</button>
+                <div class="play__stats stats">
                     <p class="stats__text">Statystyki z bieżącej gry:</p>
                     <p class="stats__wins">Wygrane: <span>10</span></p>
                     <p class="stats__draws">Remisy: <span>20</span></p>
